--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@nebular/theme": "3.0.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "@swimlane/ngx-charts": "^10.0.0",
+    "angular-datatables": "^7.0.0",
     "angular-tree-component": "7.2.0",
     "angular2-chartjs": "0.4.1",
     "angular2-toaster": "^6.1.0",
@@ -60,10 +61,13 @@
     "ckeditor": "4.7.3",
     "classlist.js": "1.1.20150312",
     "core-js": "2.5.1",
+    "datatables.net": "^1.10.19",
+    "datatables.net-dt": "^1.10.19",
     "echarts": "^4.0.2",
     "eva-icons": "^1.1.0",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
+    "jquery": "^3.3.1",
     "leaflet": "1.2.0",
     "nebular-icons": "1.1.0",
     "ng2-ckeditor": "^1.2.2",
@@ -83,15 +87,17 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.10.2",
-    "@angular/compiler-cli": "^7.0.3",
     "@angular/cli": "^7.0.3",
+    "@angular/compiler-cli": "^7.0.3",
     "@angular/language-service": "7.0.0",
     "@compodoc/compodoc": "1.0.1",
     "@fortawesome/fontawesome-free": "^5.2.0",
     "@types/d3-color": "1.0.5",
+    "@types/datatables.net": "^1.10.14",
     "@types/googlemaps": "^3.30.4",
     "@types/jasmine": "2.5.54",
     "@types/jasminewd2": "2.0.3",
+    "@types/jquery": "^3.3.29",
     "@types/leaflet": "1.2.3",
     "@types/node": "6.0.90",
     "codelyzer": "^4.5.0",
